--- a/Links.html
+++ b/Links.html
@@ -69,7 +69,7 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="favorite places">Faiforite Places</a>
+              <a class="nav-link" href="faforite places.html">Faiforite Places</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="Links.html">Links</a>
