--- a/faforite places.html
+++ b/faforite places.html
@@ -39,7 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="/">
+        <a class="navbar-brand p-0" href="index.html">
           <img src="MA.png" alt="Logo" width="50" />
         </a>
         <button
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Faforite places</a>
